# pyroll-ring-model

./: .pytask.sqlite3  LICENSE  README.md  hatch.toml  latexmkrc  pyproject.toml
docs/: docs.tex
docs/img/: task_ring_model.py
pyroll/: ring_model.py
pyroll/ring_model/: __init__.py
tests/: test_ring_model.py
